src/Base/main/default/objects/AcctSeed__Fixed_Asset__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Fixed Assets</relationshipLabel>
    <relationshipName>Fixed_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>