src/Base/main/default/objects/AcctSeed__Fixed_Asset__c/fields/AcctSeed__Value__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Value__c</fullName>
    <inlineHelpText>Purchase Cost of the fixed asset</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>