src/Base/main/default/objects/AcctSeed__Fixed_Asset__c/fields/Age_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Asset__c</fullName>
    <formula>Today()-Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>