src/Base/main/default/objects/AcctSeed__Fixed_Asset__c/fields/Asset_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Serial_Number__c</fullName>
    <label>Asset Serial Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>