src/Base/main/default/objects/AcctSeed__Fixed_Asset__c/fields/Current_Kms_or_Hours__c.field-meta.xml
<CustomField>
    <fullName>Current_Kms_or_Hours__c</fullName>
    <label>Current Kms or Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>