src/Base/main/default/objects/AcctSeed__Fixed_Asset__c/fields/Depreciation_Method__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Method__c</fullName>
    <label>Depreciation Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>