src/Base/main/default/objects/AcctSeed__Fixed_Asset__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <length>255</length>
    <type>Text</type>
</CustomField>