src/Base/main/default/objects/AcctSeed__Fixed_Asset__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Backhoe</fullName>
            </value>
            <value>
                <fullName>Forklift</fullName>
            </value>
            <value>
                <fullName>Front end Loader</fullName>
            </value>
            <value>
                <fullName>Genie Boom</fullName>
            </value>
            <value>
                <fullName>MultiOne</fullName>
            </value>
            <value>
                <fullName>Telehandler</fullName>
            </value>
            <value>
                <fullName>Trackless</fullName>
            </value>
            <value>
                <fullName>Tractor</fullName>
            </value>
            <value>
                <fullName>Trailers</fullName>
            </value>
            <value>
                <fullName>Trucks</fullName>
            </value>
            <value>
                <fullName>Trucks (1500)</fullName>
            </value>
            <value>
                <fullName>Trucks (2500)</fullName>
            </value>
            <value>
                <fullName>Van&apos;s</fullName>
            </value>
            <value>
                <fullName>Wrangler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>